--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-
 .main{
   border: 2px solid darkblue;
   padding: 1rem;
   width: 20vw;
   padding-right: 2rem;
+  margin-top: 2rem;
 }
 img{
   width: 20vw;
