--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,39 @@
+/* below styles for landing page */
+.Landing{
+    display: flex;
+    align-items: center;
+    margin: 5%;
+    justify-content: space-evenly;
+}
+.landing_img{
+    width: 45vw;
+    height: 80vh;
+    align-self: center;
+    justify-self: center;
+}
+.name_button{
+    text-align: center;
+}
+.name{
+    color: green;
+    font-family:'Times New Roman';
+    font-size: 2rem;
+}
+.button{
+    margin: 2.5rem;
+    text-decoration: none;
+    border: 1px black solid;
+    padding: 0.2rem;
+    color: green;
+    font-size: 1.2rem;
+    border-radius: 5px;
+}
+.button:hover{
+    color: #C7E8F3;
+    background-color: #41393E;
+}
+
+/* below code for instaclone  */
 #header{
     border: 1px black solid;
     display: flex;
@@ -20,6 +56,7 @@
 .post{
     margin: 1rem;    
 }
+/* below style for each component */
 .content{
     display: flex;
     flex-direction: column;
